# ms_deform_attn

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
csrc/: ms_deform_attn.cpp  ms_deform_attn.h
csrc/cuda/: ms_deform_attn_cuda.cu  ms_deform_attn_cuda.h  ms_deform_im2col_cuda.cuh
src/ms_deform_attn/: __init__.py  function.py  module.py
tests/: ms_deform_attn_core.py  test.py
